--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
-        "symfony/dom-crawler": "^7.1",
-        "ext-couchbase": "*"
+        "symfony/dom-crawler": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
